Added new follow and unfollow actions

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.password_field :password, autocomplete: "off", placeholder: 'Enter Password', class 'form-control' %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: 'Enter Password', class: 'form-control' %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
