--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,14 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Message:</strong>
-  <%= @tweet.message %>
-</p>
 
 <p>
   <strong>User:</strong>
-  <%= @tweet.user_id %>
+  <%= image_tag @tweet.user.avatar.thumb %><%= link_to @tweet.user.username, show_user_path(id: tweet.user.id) %>
 </p>
+
+<p>
+	<strong>Message:</strong>
+  <%= @tweet.message %>
+</p>
+
+
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
