--- a/app/views/epicenter/feed.html.erb
+++ b/app/views/epicenter/feed.html.erb
@@ -1,10 +1,22 @@
 <h1>@<%= current_user.username %>'s Feed</h1>
+
+
+<%= form_for Tweet.new, url: {action: "epi_tweet"} do |f| %>
+	<%= f.text_field :message, class: "form-control", placeholder: "What's on your mind?" %>
+	<%= f.hidden_field :user_id, value: current_user.id %>
+	<br />
+	<%= f.submit "New Tweet", class: "btn btn-primary" %>
+<% end %>
+
+<br />
+<br />
+
 <h3>Word on the street is...</h3>
 
 <div>
 	<% @following_tweets.each do |tweet| %>
 		<div>
-			<p><%= image_tag tweet.user.avatar.thumb %></p>
+			<p><%= image_tag tweet.user.avatar.thumb, class: "img-circle" %></p>
 			<strong><p>@<%= link_to tweet.user.username, show_user_path(id: tweet.user.id) %></p></strong>
 			<p><%= tweet.message.html_safe %></p>
 		</div>
