--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -1,6 +1,6 @@
 <h1>@<%= @user.username %>'s Profile & Tweets...</h1>
 
-<p><%= image_tag @user.avatar.thumb %></p>
+<p><%= image_tag @user.avatar.thumb, class: "img-circle" %></p>
 <p>Name: <%= @user.name %></p>
 <p>Location: <%= @user.location %></p>
 <p>Bio: <%= @user.bio %></p>
@@ -18,6 +18,6 @@
 <% @user.tweets.each do |tweet| %>
     <div>
         <p>@<%= @user.username %></p>
-	<p><%= tweet.message %></p>
+	<p><%= tweet.message.html_safe %></p>
     </div>
 <% end %>
