--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
   
-  <nav class="navbar navbar-default" "nav-navbar-fixed" >
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -28,13 +28,16 @@
           <li><%= link_to "Compose New Tweet", new_tweet_path %></li>
 
           <li><%= link_to "All Tweets", tweets_path %></li>
+
+          <li><a href="http://localhost:3000/tweets/new"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <% if current_user.avatar.blank? == false %>
-                  <%= image_tag current_user.avatar.url, size:25, class: "user-pic-nav" %>
+                  <%= image_tag current_user.avatar.url, size:25, class: "user-pic-nav", class: "img-circle" %>
                 <% end %> 
                 @<%= current_user.username %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -48,12 +51,12 @@
     </div>
   </nav>	
 
+<div class="container">
+  <%= yield %>
+</div>
 
-
-
-
-    <div class="container">
-    	<%= yield %>
-    </div>
   </body>
 </html>
+
+
+
