--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,9 +14,9 @@
   <tbody>
     <% @tweets.each do |tweet| %>
       <tr>
-        <td><%= tweet.message %></td>
+        <td><%= tweet.message.html_safe %></td>
         <td><%= link_to tweet.user.username, show_user_path(id: tweet.user.id) %></td>
-        <td><%= image_tag tweet.user.avatar.thumb %></td>
+        <td><%= image_tag tweet.user.avatar.thumb, class: "img-circle" %></td>
         <td><%= link_to 'Show', tweet %></td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
