--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -3,12 +3,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= image_tag @tweet.user.avatar.thumb %><%= link_to @tweet.user.username, show_user_path(id: tweet.user.id) %>
+  <%= image_tag @tweet.user.avatar.thumb %><%= link_to @tweet.user.username, show_user_path(id: @tweet.user.id) %>
 </p>
 
 <p>
 	<strong>Message:</strong>
-  <%= @tweet.message %>
+  <%= @tweet.message.html_safe %>
 </p>
 
 
