--- a/app/views/epicenter/feed.html.erb
+++ b/app/views/epicenter/feed.html.erb
@@ -19,6 +19,8 @@
 			<p><%= image_tag tweet.user.avatar.thumb, class: "img-circle" %></p>
 			<strong><p>@<%= link_to tweet.user.username, show_user_path(id: tweet.user.id) %></p></strong>
 			<p><%= tweet.message.html_safe %></p>
+			<p>• <%= time_ago_in_words(tweet.created_at) if Time.now - tweet.created_at < 86400 %><%= tweet.created_at.strftime('%b%e') if Time.now - tweet.created_at > 86400 %> 
+</p>
 		</div>
 	<% end %>
 </div>
