--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -4,10 +4,12 @@
 <p>Name: <%= @user.name %></p>
 <p>Location: <%= @user.location %></p>
 <p>Bio: <%= @user.bio %></p>
+<p><%= link_to "Peeps", following_path(id: @user.id) %></p>
+<p><%= link_to "Followers", followers_path(id: @user.id) %></p>
 
 <p>
     <% if current_user.following.include?(@user.id) %>
-        <%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger" %>
+        <%= link_to "Following", unfollow_path(id: @user.id), class: "btn btn-primary", id: "unfollow_btn" %>
     <% else %>
         <% if current_user.id != @user.id %>
 	    <%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
@@ -19,5 +21,8 @@
     <div>
         <p>@<%= @user.username %></p>
 	<p><%= tweet.message.html_safe %></p>
+    <p>• <%= time_ago_in_words(tweet.created_at) %> ago</p>
     </div>
 <% end %>
+
+
