--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-  
+ 
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -29,6 +30,12 @@
 
           <li><%= link_to "All Tweets", tweets_path %></li>
 
+          <li><%= link_to "All Users", all_users_path %></li>
+
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+
+      
+
           <li><a href="http://localhost:3000/tweets/new"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></li>
 
         </ul>
@@ -38,22 +45,63 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <% if current_user.avatar.blank? == false %>
                   <%= image_tag current_user.avatar.url, size:25, class: "user-pic-nav", class: "img-circle" %>
-                <% end %> 
+                <% end %>
                 @<%= current_user.username %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                 <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
-          <% end %>
+        <% end %>
         </ul>
       </div>
     </div>
   </nav>	
 
 <div class="container">
-  <%= yield %>
+  <% if user_signed_in? %>
+    <div class="col-md-3">
+      <div class="panel panel-info">
+        <center><div class="panel-body">
+          <%= image_tag @current_user.avatar.thumb, class: "img-circle" %>
+          <br />
+          <strong><%= @current_user.name %></strong>
+          <br />
+          <strong><i class="fa fa-user" aria-hidden="true"></i>@<%= @current_user.username %></strong>
+          <br />
+          <strong><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @current_user.location %></strong>
+          <br />
+          <strong><i class="fa fa-book" aria-hidden="true"></i><%= @current_user.bio %></strong>
+                </div></center>
+      </div>
+    </div>
+
+
+    <div class="col-md-6">
+      <div class="panel panel-info">
+        <div class="panel-body">
+          <%= yield %>
+        </div>
+      </div>
+    </div> 
+
+    <div class="col-md-3">
+      <div class="panel panel-info">
+        <div class="panel-body">
+
+        </div>
+      </div>
+    </div>
+
+  <% else %>
+    <%= yield %>
+  <% end %>
 </div>
+   
+
+
+  
+
 
   </body>
 </html>
