--- a/app/views/epicenter/feed.html.erb
+++ b/app/views/epicenter/feed.html.erb
@@ -1,6 +1,5 @@
-<h1>@<%= current_user.username %>'s Feed</h1>
-
-
+<div class="well">
+	<h1>@<%= current_user.username %>'s Feed</h1>
 <%= form_for Tweet.new, url: {action: "epi_tweet"} do |f| %>
 	<%= f.text_field :message, class: "form-control", placeholder: "What's on your mind?" %>
 	<%= f.hidden_field :user_id, value: current_user.id %>
@@ -11,16 +10,30 @@
 <br />
 <br />
 
-<h3>Word on the street is...</h3>
+<center><h3>Word on the street is...</h3></center>
 
-<div>
+
 	<% @following_tweets.each do |tweet| %>
-		<div>
-			<p><%= image_tag tweet.user.avatar.thumb, class: "img-circle" %></p>
-			<strong><p>@<%= link_to tweet.user.username, show_user_path(id: tweet.user.id) %></p></strong>
-			<p><%= tweet.message.html_safe %></p>
-			<p>• <%= time_ago_in_words(tweet.created_at) if Time.now - tweet.created_at < 86400 %><%= tweet.created_at.strftime('%b%e') if Time.now - tweet.created_at > 86400 %> 
-</p>
-		</div>
-	<% end %>
+<div class="panel panel-info">
+	<div class="panel-heading">	
+		<i class="pull-right">
+					<%= image_tag tweet.user.avatar.thumb, class: "img-circle" %>
+				</i>	
+			<h1 class="panel-title">
+				<p class="message_header">@<%= link_to tweet.user.username, show_user_path(id: tweet.user.id) %> • <%= time_ago_in_words(tweet.created_at) if Time.now - tweet.created_at < 86400 %><%= tweet.created_at.strftime('%b%e') if Time.now - tweet.created_at > 86400 %></p></h1>
+				
+	</div>
+			
+	<div class="panel-body">
+		<p class="messages"><%= tweet.message.html_safe %></p>
+	</div>
+		
 </div>
+	<% end %>	
+</div>	
+
+
+
+		
+	
+
