--- a/app/views/epicenter/tag_tweets.html.erb
+++ b/app/views/epicenter/tag_tweets.html.erb
@@ -2,17 +2,20 @@
     <h1><%= @tag.phrase %></h1>
 </div>
 
-<div class="row">
+<div class="well">
   <!-- a place for current user stats -->
-  <div>
     <% @tag.tweets.order(created_at: :desc).each do |tweet| %>
-        <p> 
-	    <%= tweet.user.name %> <%= "@#{tweet.user.username}" %>
+
+<div class="panel panel-info"> 
+  <div class="panel-heading">
+	    <p class="panel-title"> <%= tweet.user.name %> <%= "@#{tweet.user.username}" %>
 	    • <%= time_ago_in_words(tweet.created_at) %>
         </p>
-	<p>
-	    <%= tweet.message.html_safe %>
-	</p>
+  </div>
+
+	 <div class="panel-body">
+    <p><%= tweet.message.html_safe %></p>
+	 </div>
     <% end %>
-   </div>
+</div>
 </div>
